[package]
name = "regex"
version = "0.1.0"
authors = ["Varunml3 <66573927+Varunml3@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
fnv = "1.0.7"
sorted-vec = "0.5.2"
educe = "0.4.13"